--- a/style.css
+++ b/style.css
@@ -245,6 +245,56 @@ nav {
 	height: 100%;
 	object-fit: cover;
 }
+
+/* gallery-section */
+.gallery {
+	display: grid;
+	min-height: 100vh;
+	grid-template-columns: repeat(3, 1fr);
+	position: relative;
+	overflow: hidden;
+}
+.gallery img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	-webkit-transform: scale(1.15);
+	transform: scale(1.15);
+	-webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+	transition: opacity 0.5s, -webkit-transform 0.5s;
+	transition: transform 0.5s, opacity 0.5s;
+	transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
+}
+
+.gallery img:hover {
+	opacity: 1;
+	-webkit-transform: scale(1.03);
+	transform: scale(1.03);
+}
+.gallery1 {
+	grid-column: 1/3;
+}
+.gallery2 {
+	grid-column: 3/4;
+	grid-row: 1/3;
+}
+
+.gallery-head {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: #fff;
+	background: #000;
+	padding: 5rem 10rem;
+	text-align: center;
+	opacity: 0.8;
+	z-index: 1;
+}
+.gallery-head h2 {
+	font-family: "Vibes";
+}
+
 /* media-query */
 @media screen and (max-width: 842px) {
 	.hero {
@@ -314,5 +364,17 @@ nav {
 	/* about section */
 	.about-text div {
 		padding: 3rem 3rem;
+	}
+
+	/* gallery-section */
+	.gallery img {
+		grid-row: auto;
+		grid-column: auto;
+	}
+	.gallery {
+		grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+	}
+	.gallery-head {
+		display: none;
 	}
 }
