--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html {
 	--header3: calc(3rem + 1vw);
 	--header4: calc(2.4rem + 1vw);
 	--text: calc(1.5rem + 1vw);
-	--bigText: calc(2rem + 1vw);
+	--bigText: calc(6rem + 1vw);
 	--special-color: #906272;
 	--background-color: #414141;
 	--grey-text: #525252;
@@ -84,6 +84,7 @@ html {
 
 body {
 	font-family: "Ruh1", sans-serif;
+	-webkit-animation: opening 1s ease-in-out;
 	animation: opening 1s ease-in-out;
 }
 h1 {
@@ -149,6 +150,7 @@ nav {
 .hero-elena {
 	width: 100%;
 	height: 100%;
+	-o-object-fit: cover;
 	object-fit: cover;
 }
 
@@ -168,6 +170,14 @@ nav {
 }
 
 /* animating the plants */
+@-webkit-keyframes opening {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
 @keyframes opening {
 	from {
 		opacity: 0;
@@ -177,12 +187,31 @@ nav {
 	}
 }
 
+@-webkit-keyframes plant {
+	from {
+		transform: translateY(10%) rotateZ(-10deg) rotateX(-90deg);
+	}
+	to {
+		transform: translateY(0%) rotateZ(0deg) rotateX(0deg);
+	}
+}
+
 @keyframes plant {
 	from {
 		transform: translateY(10%) rotateZ(-10deg) rotateX(-90deg);
 	}
 	to {
 		transform: translateY(0%) rotateZ(0deg) rotateX(0deg);
+	}
+}
+
+@-webkit-keyframes plant-shade {
+	from {
+		transform: rotateZ(-5deg);
+	}
+
+	to {
+		transform: rotateZ(0deg);
 	}
 }
 
@@ -243,6 +272,7 @@ nav {
 .about-image img {
 	width: 100%;
 	height: 100%;
+	-o-object-fit: cover;
 	object-fit: cover;
 }
 
@@ -257,18 +287,14 @@ nav {
 .gallery img {
 	width: 100%;
 	height: 100%;
+	-o-object-fit: cover;
 	object-fit: cover;
-	-webkit-transform: scale(1.15);
 	transform: scale(1.15);
-	-webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
-	transition: opacity 0.5s, -webkit-transform 0.5s;
 	transition: transform 0.5s, opacity 0.5s;
-	transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
 }
 
 .gallery img:hover {
 	opacity: 1;
-	-webkit-transform: scale(1.03);
 	transform: scale(1.03);
 }
 .gallery1 {
@@ -277,6 +303,7 @@ nav {
 .gallery2 {
 	grid-column: 3/4;
 	grid-row: 1/3;
+	/* z-index: 5; */
 }
 
 .gallery-head {
@@ -295,6 +322,74 @@ nav {
 	font-family: "Vibes";
 }
 
+/* contact section */
+.contact {
+	min-height: 90vh;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.form-wrapper {
+	flex: 3 1 40rem;
+}
+.form-wrapper h2 {
+	margin: 5rem 0;
+}
+
+.form-wrapper span {
+	font-size: var(--bigText);
+	color: var(--special-color);
+}
+.form-wrapper label {
+	display: block;
+}
+
+.form-wrapper input {
+	display: block;
+	margin: 3rem 0;
+	background: var(--background-color);
+	color: #fff;
+	border: none;
+	padding: 1rem;
+	border-radius: 10px/20px;
+}
+.form-wrapper button {
+	padding: 1rem 8rem;
+	background: var(--special-color);
+	color: #fff;
+	border: none;
+	border-radius: 10px/20px;
+	cursor: pointer;
+	width: 100%;
+}
+
+.contact img {
+	flex: 1 1 40rem;
+	-o-object-fit: cover;
+	object-fit: cover;
+}
+
+/* footer */
+footer {
+	background: var(--background-color);
+	color: #fff;
+	display: flex;
+	padding: 3rem 5%;
+	align-items: center;
+	flex-wrap: wrap;
+}
+footer ul {
+	display: flex;
+	flex: 1 1 40rem;
+	justify-content: space-between;
+	align-items: center;
+}
+
+footer h4 {
+	flex: 3 1 40rem;
+	font-size: calc(1.4rem + 1vw);
+}
+
 /* media-query */
 @media screen and (max-width: 842px) {
 	.hero {
@@ -307,6 +402,7 @@ nav {
 	.burger {
 		position: relative;
 		display: block;
+		cursor: pointer;
 	}
 	.burger span {
 		padding: 0.2rem 2rem;
@@ -331,7 +427,7 @@ nav {
 		align-items: center;
 		transition: transform 1s ease;
 	}
-	.menu-check {
+	/* .menu-check {
 		display: block;
 		position: absolute;
 		top: 50%;
@@ -342,23 +438,23 @@ nav {
 		cursor: pointer;
 		opacity: 0;
 		z-index: 100;
-	}
-	.menu-check:checked + .nav-links {
+	} */
+	.nav-open {
 		transform: translateX(-100%);
 	}
 
-	.menu-check:checked ~ .burger span {
-		background: #fff;
+	.toggle .line1 {
+		transform: rotateZ(45deg) translateY(300%);
+		background-color: #fff;
 	}
 
-	.menu-check:checked ~ .burger span:nth-child(1) {
-		transform: rotateZ(45deg) translateY(300%);
-	}
-	.menu-check:checked ~ .burger span:nth-child(2) {
-		opacity: 0;
-	}
-	.menu-check:checked ~ .burger span:nth-child(3) {
+	.toggle .line3 {
 		transform: rotateZ(-45deg) translateY(-300%);
+		background-color: #fff;
+	}
+
+	.toggle .line2 {
+		opacity: 0;
 	}
 
 	/* about section */
@@ -376,5 +472,31 @@ nav {
 	}
 	.gallery-head {
 		display: none;
+	}
+
+	/* contact image */
+	.contact img {
+		display: none;
+	}
+	/* footer */
+	footer ul {
+		order: 1;
+	}
+
+	footer h4 {
+		order: 2;
+		text-align: center;
+		padding: 1rem;
+	}
+}
+
+@media screen and (min-width: 1700px) {
+	:root {
+		--header1: 3rem;
+		--header2: 5rem;
+		--header3: 4rem;
+		--header4: 3rem;
+		--text: 3rem;
+		--bigText: 8rem;
 	}
 }
